[tool.poetry]
name = "егор дз"
version = "0.1.0"
description = ""
authors = ["Konstantin Korovin <ryan337@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.link.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
